fix(docusaurus): show title on mobile
Part of f87abead89d19bd0b77d6aa3d700d0890502b479

--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -40,7 +40,7 @@
   text-decoration: underline;
 }
 
-.inline {
+.navbar__item.inline {
   display: inline-block;
 }
 
